--- a/demo/index.html
+++ b/demo/index.html
@@ -33,7 +33,7 @@
 	
 
 	<script src="bower_components.js"></script>
-	<script src="../src/lang-flag.js"></script>
+	<script src="../src/lang-flag-icon.js"></script>
 	<script src="modernizr-custom.js"></script>
 
 	<script>
