--- a/demo/index.html
+++ b/demo/index.html
@@ -11,9 +11,21 @@
 
   <link  href="bower_components.css" rel="stylesheet">	
   <link  href="demo.css" rel="stylesheet">	
+	<style>
+		div.big {
+			display:inline-block; 
+			width:100px; 
+			height:75px;
+			border: 1px solid black;
+		}
+	</style>
 </head>
 
 <body>
+	<div class="big flag-icon-background flag-icon-dk"></div>&nbsp;
+	<div class="big flag-icon-background flag-icon-gl"></div>&nbsp;
+	<div class="big flag-icon-background flag-icon-fo"></div>
+	<hr>
 	<button onClick="setFlag('dk')"><i class="flag-icon flag-icon-dk"></i> This is Denmark</button><br>
 	<button onClick="setLang('da')"><i class="flag-icon lang-icon-da"></i> This is Danish</button><br>
 	<button onClick="setFlag('gl')"><i class="flag-icon flag-icon-gl"></i> This is Greenland</button><br>
