Bug fix in _lang-flag-icon.scss

--- a/demo/index.html
+++ b/demo/index.html
@@ -38,9 +38,9 @@
     	<div class="big        fa-flag-fo"></div>&nbsp;
     	<div class="big-square fa-flag-fo fa-flag-squared"></div>
     	<hr>
-	    <button onClick="setFlag('dk')"><i class="fa fa-flag-dk"></i> This is Denmark</button><br>
+	    <button style="font-size:20px" onClick="setFlag('dk')"><i class="fa fa-flag-dk"></i> This is Denmark</button><br>
     	<button onClick="setLang('da')"><i class="fa fa-lang-da"></i> This is Danish</button><br>
-	    <button onClick="setFlag('gl')"><i class="fa fa-flag-gl"></i> This is Greenland</button><br>
+	    <button style="font-size:20px" onClick="setFlag('gl')"><i class="fa fa-flag-gl"></i> This is Greenland</button><br>
     	<button onClick="setLang('kl')"><i class="fa fa-lang-kl"></i> This is Kalaallisut</button>
 	    <hr>
 
